--- a/nn/vercel.json
+++ b/nn/vercel.json
@@ -1,15 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "client/**",
-      "use": "@vercel/static"
-    }
-  ],
+  "builds": [{ "src": "client/**", "use": "@vercel/static" }],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/client/$1"
-    }
+    { "src": "/", "dest": "/client/index.html" },
+    { "src": "/(.*)", "dest": "/client/$1" }
   ]
 }
